--- a/CSS/navigation_menu.css
+++ b/CSS/navigation_menu.css
@@ -1,5 +1,6 @@
 /* Navigation menu */
 body #navigation {
+    z-index: 10;
     background-color: #333;
     overflow: hidden;
     position: sticky;
